--- a/src/components/Tasklist/style.css
+++ b/src/components/Tasklist/style.css
@@ -1,6 +1,6 @@
 .tasklist {
     padding: 8px;
-    background-color: brown;
+    background-color: rgb(151, 65, 65);
     border-radius: 2px;
 }
 
@@ -16,3 +16,34 @@
     display: flex;
     flex-direction: column;
 }
+
+.tasklist .content .empty-list {
+    text-align: center;
+    border: 1px dashed white;
+    border-radius: 4px;
+    padding: 4px;
+  }
+  
+  .tasklist .btn {
+    margin-top: 8px;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    background: none;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    background: #7d0d0d;
+    transition: background-color 0.3s;
+  }
+  
+  .tasklist .btn:hover {
+    background-color: #580707;
+    cursor: pointer;
+  }
+  
+  .tasklist .btn img {
+    width: 15px;
+    height: 15px;
+    margin-right: 4px;
+  }
